# gad

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  doomsday.cpp  doomsday.h  main.cpp
test/: CMakeLists.txt  test_gad.cpp
